--- a/app/templates/label.html
+++ b/app/templates/label.html
@@ -25,7 +25,7 @@
 			<div id="upper" class="row"></div>
 			<div id="lower">
 				<h3 align="left" >Please descripe the reason why you choose it.</h3>
-                <textarea id = "reason" placeholder = "請說明您是依據什麼標準來決定該活動？" rows="4" cols="50" style="margin: 0px; width: 904px; height: 200px;"></textarea>
+                <textarea id = "reason" value="None" placeholder = "請說明您是依據什麼標準來決定該活動？" rows="4" cols="50" style="margin: 0px; width: 904px; height: 200px;"></textarea>
 				<!--
 				<div class="choice long" value="Others" onclick="light(this)">
 					<div class="floater"></div>
