modify the js,css,html,model

--- a/app/templates/label.html
+++ b/app/templates/label.html
@@ -19,9 +19,9 @@
 		<div id="picturearea" align="center">
 			<h2 align="center">請判斷下圖為何種活動？</h2>
     			<div id="picframe" align="center" style="width: 80%">
-				<img id="pic" style="width: 50%; height: 50%">
+				<img id="pic" style="width: 80%; height: 80%">
 			</div>
-    			<h2 id="time" align="center"></h2><br>
+    			<h5 id="time" align="center"></h5><br>
 			<div id="upper" class="row"></div>
 			<div id="lower">
 				<h4 align="left" >請描述您選擇該活動的原因 (請用中文作答)</h4>
@@ -45,10 +45,9 @@
 			</div>
 			
 			<div id="submit">
-				<div id="innersubmit" class="long" value="Others" onclick="record()">
-					<div class="floater"></div>
-					<div id="word1" class="sword">Next</div>
-				</div>
+				<button id="next" class="btn btn-primary btn-lg" value="Others" onclick="record()">
+					Next
+				</button>
 			</div>
 		</div>
 	</div>
